seaqt/QtWidgets/gen_qgraphicseffect.h

typedef struct QBrush QBrush;
typedef struct QChildEvent QChildEvent;
typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QGraphicsBlurEffect QGraphicsBlurEffect;
typedef struct QGraphicsColorizeEffect QGraphicsColorizeEffect;
typedef struct QGraphicsDropShadowEffect QGraphicsDropShadowEffect;
typedef struct QGraphicsEffect QGraphicsEffect;
typedef struct QGraphicsOpacityEffect QGraphicsOpacityEffect;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QPixmap QPixmap;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QTimerEvent QTimerEvent;
void QGraphicsEffect_connect_enabledChanged(QGraphicsEffect* self, intptr_t slot, void (*callback)(intptr_t, bool), void (*release)(intptr_t));
struct QGraphicsColorizeEffect_VTable {
	void (*destructor)(struct QGraphicsColorizeEffect_VTable* vtbl, QGraphicsColorizeEffect* self);
	QMetaObject* (*metaObject)(struct QGraphicsColorizeEffect_VTable* vtbl, const QGraphicsColorizeEffect* self);
	void* (*metacast)(struct QGraphicsColorizeEffect_VTable* vtbl, QGraphicsColorizeEffect* self, const char* param1);
	int (*metacall)(struct QGraphicsColorizeEffect_VTable* vtbl, QGraphicsColorizeEffect* self, int param1, int param2, void** param3);
	void (*draw)(struct QGraphicsColorizeEffect_VTable* vtbl, QGraphicsColorizeEffect* self, QPainter* painter);
	QRectF* (*boundingRectFor)(struct QGraphicsColorizeEffect_VTable* vtbl, const QGraphicsColorizeEffect* self, QRectF* sourceRect);
	void (*sourceChanged)(struct QGraphicsColorizeEffect_VTable* vtbl, QGraphicsColorizeEffect* self, int flags);
	bool (*event)(struct QGraphicsColorizeEffect_VTable* vtbl, QGraphicsColorizeEffect* self, QEvent* event);
	bool (*eventFilter)(struct QGraphicsColorizeEffect_VTable* vtbl, QGraphicsColorizeEffect* self, QObject* watched, QEvent* event);
	void (*timerEvent)(struct QGraphicsColorizeEffect_VTable* vtbl, QGraphicsColorizeEffect* self, QTimerEvent* event);
	void (*childEvent)(struct QGraphicsColorizeEffect_VTable* vtbl, QGraphicsColorizeEffect* self, QChildEvent* event);
	void (*customEvent)(struct QGraphicsColorizeEffect_VTable* vtbl, QGraphicsColorizeEffect* self, QEvent* event);
	void (*connectNotify)(struct QGraphicsColorizeEffect_VTable* vtbl, QGraphicsColorizeEffect* self, QMetaMethod* signal);
	void (*disconnectNotify)(struct QGraphicsColorizeEffect_VTable* vtbl, QGraphicsColorizeEffect* self, QMetaMethod* signal);
};
QGraphicsColorizeEffect* QGraphicsColorizeEffect_new(struct QGraphicsColorizeEffect_VTable* vtbl);
QGraphicsColorizeEffect* QGraphicsColorizeEffect_new2(struct QGraphicsColorizeEffect_VTable* vtbl, QObject* parent);
void QGraphicsColorizeEffect_connect_colorChanged(QGraphicsColorizeEffect* self, intptr_t slot, void (*callback)(intptr_t, QColor*), void (*release)(intptr_t));
void QGraphicsColorizeEffect_connect_strengthChanged(QGraphicsColorizeEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QGraphicsColorizeEffect_virtualbase_sourceChanged(void* self, int flags);
bool QGraphicsColorizeEffect_virtualbase_event(void* self, QEvent* event);
bool QGraphicsColorizeEffect_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
void QGraphicsColorizeEffect_virtualbase_timerEvent(void* self, QTimerEvent* event);
void QGraphicsColorizeEffect_virtualbase_childEvent(void* self, QChildEvent* event);
void QGraphicsColorizeEffect_virtualbase_customEvent(void* self, QEvent* event);
void QGraphicsColorizeEffect_virtualbase_connectNotify(void* self, QMetaMethod* signal);
void QGraphicsColorizeEffect_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QGraphicsColorizeEffect_protectedbase_updateBoundingRect(void* self);
bool QGraphicsColorizeEffect_protectedbase_sourceIsPixmap(const void* self);
QRectF* QGraphicsColorizeEffect_protectedbase_sourceBoundingRect(const void* self);
void QGraphicsColorizeEffect_protectedbase_drawSource(void* self, QPainter* painter);
QPixmap* QGraphicsColorizeEffect_protectedbase_sourcePixmap(const void* self);
QObject* QGraphicsColorizeEffect_protectedbase_sender(const void* self);
int QGraphicsColorizeEffect_protectedbase_senderSignalIndex(const void* self);
int QGraphicsColorizeEffect_protectedbase_receivers(const void* self, const char* signal);
bool QGraphicsColorizeEffect_protectedbase_isSignalConnected(const void* self, QMetaMethod* signal);
const QMetaObject* QGraphicsColorizeEffect_staticMetaObject();
void QGraphicsColorizeEffect_delete(QGraphicsColorizeEffect* self);
struct QGraphicsBlurEffect_VTable {
	void (*destructor)(struct QGraphicsBlurEffect_VTable* vtbl, QGraphicsBlurEffect* self);
	QMetaObject* (*metaObject)(struct QGraphicsBlurEffect_VTable* vtbl, const QGraphicsBlurEffect* self);
	void* (*metacast)(struct QGraphicsBlurEffect_VTable* vtbl, QGraphicsBlurEffect* self, const char* param1);
	int (*metacall)(struct QGraphicsBlurEffect_VTable* vtbl, QGraphicsBlurEffect* self, int param1, int param2, void** param3);
	QRectF* (*boundingRectFor)(struct QGraphicsBlurEffect_VTable* vtbl, const QGraphicsBlurEffect* self, QRectF* rect);
	void (*draw)(struct QGraphicsBlurEffect_VTable* vtbl, QGraphicsBlurEffect* self, QPainter* painter);
	void (*sourceChanged)(struct QGraphicsBlurEffect_VTable* vtbl, QGraphicsBlurEffect* self, int flags);
	bool (*event)(struct QGraphicsBlurEffect_VTable* vtbl, QGraphicsBlurEffect* self, QEvent* event);
	bool (*eventFilter)(struct QGraphicsBlurEffect_VTable* vtbl, QGraphicsBlurEffect* self, QObject* watched, QEvent* event);
	void (*timerEvent)(struct QGraphicsBlurEffect_VTable* vtbl, QGraphicsBlurEffect* self, QTimerEvent* event);
	void (*childEvent)(struct QGraphicsBlurEffect_VTable* vtbl, QGraphicsBlurEffect* self, QChildEvent* event);
	void (*customEvent)(struct QGraphicsBlurEffect_VTable* vtbl, QGraphicsBlurEffect* self, QEvent* event);
	void (*connectNotify)(struct QGraphicsBlurEffect_VTable* vtbl, QGraphicsBlurEffect* self, QMetaMethod* signal);
	void (*disconnectNotify)(struct QGraphicsBlurEffect_VTable* vtbl, QGraphicsBlurEffect* self, QMetaMethod* signal);
};
QGraphicsBlurEffect* QGraphicsBlurEffect_new(struct QGraphicsBlurEffect_VTable* vtbl);
QGraphicsBlurEffect* QGraphicsBlurEffect_new2(struct QGraphicsBlurEffect_VTable* vtbl, QObject* parent);
QMetaObject* QGraphicsBlurEffect_metaObject(const QGraphicsBlurEffect* self);
void* QGraphicsBlurEffect_metacast(QGraphicsBlurEffect* self, const char* param1);
int QGraphicsBlurEffect_metacall(QGraphicsBlurEffect* self, int param1, int param2, void** param3);
struct miqt_string QGraphicsBlurEffect_tr(const char* s);
struct miqt_string QGraphicsBlurEffect_trUtf8(const char* s);
QRectF* QGraphicsBlurEffect_boundingRectFor(const QGraphicsBlurEffect* self, QRectF* rect);
double QGraphicsBlurEffect_blurRadius(const QGraphicsBlurEffect* self);
int QGraphicsBlurEffect_blurHints(const QGraphicsBlurEffect* self);
void QGraphicsBlurEffect_setBlurRadius(QGraphicsBlurEffect* self, double blurRadius);
void QGraphicsBlurEffect_setBlurHints(QGraphicsBlurEffect* self, int hints);
void QGraphicsBlurEffect_blurRadiusChanged(QGraphicsBlurEffect* self, double blurRadius);
void QGraphicsBlurEffect_connect_blurRadiusChanged(QGraphicsBlurEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QGraphicsBlurEffect_blurHintsChanged(QGraphicsBlurEffect* self, int hints);
void QGraphicsBlurEffect_connect_blurHintsChanged(QGraphicsBlurEffect* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
struct miqt_string QGraphicsBlurEffect_tr2(const char* s, const char* c);
struct miqt_string QGraphicsBlurEffect_tr3(const char* s, const char* c, int n);
struct miqt_string QGraphicsBlurEffect_trUtf82(const char* s, const char* c);
struct miqt_string QGraphicsBlurEffect_trUtf83(const char* s, const char* c, int n);
QMetaObject* QGraphicsBlurEffect_virtualbase_metaObject(const void* self);
void* QGraphicsBlurEffect_virtualbase_metacast(void* self, const char* param1);
int QGraphicsBlurEffect_virtualbase_metacall(void* self, int param1, int param2, void** param3);
QRectF* QGraphicsBlurEffect_virtualbase_boundingRectFor(const void* self, QRectF* rect);
void QGraphicsBlurEffect_virtualbase_draw(void* self, QPainter* painter);
void QGraphicsBlurEffect_virtualbase_sourceChanged(void* self, int flags);
bool QGraphicsBlurEffect_virtualbase_event(void* self, QEvent* event);
bool QGraphicsBlurEffect_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
void QGraphicsBlurEffect_virtualbase_timerEvent(void* self, QTimerEvent* event);
void QGraphicsBlurEffect_virtualbase_childEvent(void* self, QChildEvent* event);
void QGraphicsBlurEffect_virtualbase_customEvent(void* self, QEvent* event);
void QGraphicsBlurEffect_virtualbase_connectNotify(void* self, QMetaMethod* signal);
void QGraphicsBlurEffect_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QGraphicsBlurEffect_protectedbase_updateBoundingRect(void* self);
bool QGraphicsBlurEffect_protectedbase_sourceIsPixmap(const void* self);
QRectF* QGraphicsBlurEffect_protectedbase_sourceBoundingRect(const void* self);
void QGraphicsBlurEffect_protectedbase_drawSource(void* self, QPainter* painter);
QPixmap* QGraphicsBlurEffect_protectedbase_sourcePixmap(const void* self);
QObject* QGraphicsBlurEffect_protectedbase_sender(const void* self);
int QGraphicsBlurEffect_protectedbase_senderSignalIndex(const void* self);
int QGraphicsBlurEffect_protectedbase_receivers(const void* self, const char* signal);
bool QGraphicsBlurEffect_protectedbase_isSignalConnected(const void* self, QMetaMethod* signal);
const QMetaObject* QGraphicsBlurEffect_staticMetaObject();
void QGraphicsBlurEffect_delete(QGraphicsBlurEffect* self);
QMetaObject* QGraphicsDropShadowEffect_metaObject(const QGraphicsDropShadowEffect* self);
void* QGraphicsDropShadowEffect_metacast(QGraphicsDropShadowEffect* self, const char* param1);
int QGraphicsDropShadowEffect_metacall(QGraphicsDropShadowEffect* self, int param1, int param2, void** param3);
struct miqt_string QGraphicsDropShadowEffect_tr(const char* s);
struct miqt_string QGraphicsDropShadowEffect_trUtf8(const char* s);
QRectF* QGraphicsDropShadowEffect_boundingRectFor(const QGraphicsDropShadowEffect* self, QRectF* rect);
QPointF* QGraphicsDropShadowEffect_offset(const QGraphicsDropShadowEffect* self);
double QGraphicsDropShadowEffect_xOffset(const QGraphicsDropShadowEffect* self);
double QGraphicsDropShadowEffect_yOffset(const QGraphicsDropShadowEffect* self);
double QGraphicsDropShadowEffect_blurRadius(const QGraphicsDropShadowEffect* self);
void QGraphicsDropShadowEffect_connect_offsetChanged(QGraphicsDropShadowEffect* self, intptr_t slot, void (*callback)(intptr_t, QPointF*), void (*release)(intptr_t));
void QGraphicsDropShadowEffect_connect_blurRadiusChanged(QGraphicsDropShadowEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QGraphicsDropShadowEffect_connect_colorChanged(QGraphicsDropShadowEffect* self, intptr_t slot, void (*callback)(intptr_t, QColor*), void (*release)(intptr_t));
void QGraphicsOpacityEffect_connect_opacityChanged(QGraphicsOpacityEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QGraphicsOpacityEffect_connect_opacityMaskChanged(QGraphicsOpacityEffect* self, intptr_t slot, void (*callback)(intptr_t, QBrush*), void (*release)(intptr_t));